--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ git = "https://github.com/skade/strand.git"
 
 git = "https://github.com/skade/leveldb.git"
 
+[[lib]]
+
+name = "drossel"
+
 [[bin]]
 
 name = "drossel"
