Use remote strand

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ authors = [ "florian.gilcher@asquera.de" ]
 
 [dependencies.strand]
 
-#git = "https://github.com/skade/strand.git"
-git = "file:///Users/skade/Code/rust/strain"
+git = "https://github.com/skade/strand.git"
 
 #[dependencies.leveldb]
 #
