--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ authors = [ "florian.gilcher@asquera.de" ]
 
 git = "https://github.com/skade/strand.git"
 
-#[dependencies.leveldb]
-#
-#git = "https://github.com/skade/leveldb.git"
+[dependencies.leveldb]
+
+git = "https://github.com/skade/leveldb.git"
 
 [lib]
 
