--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,11 @@ name = "drossel"
 version = "0.1.0"
 authors = [ "florian.gilcher@asquera.de" ]
 
-[dependencies.strand]
+[dependencies]
 
-git = "https://github.com/skade/strand.git"
-
-[dependencies.leveldb]
-
-git = "https://github.com/skade/leveldb.git"
+strand = "0.1.0"
+leveldb = "0.1.0"
 
 [lib]
 
 name = "drossel"
-
-#[[bin]]
-#
-#name = "drossel-server"
