--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ authors = [ "florian.gilcher@asquera.de" ]
 
 [dependencies]
 
-strand = "0.1.0"
-leveldb = "0.2.0"
+strand          = "0.1.0"
+leveldb         = "0.2.0"
+drossel-journal = "0.1.1"
 
 [lib]
 
