--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ name = "drossel"
 version = "0.1.0"
 authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]
 
+license = "MIT"
+
 [dependencies]
 
 strand          = "0.1.0"
