Add description field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 authors = [ "Florian Gilcher <florian.gilcher@asquera.de>" ]
 
 license = "MIT"
+description = "A queuing server modeled after Kestrel"
 
 [dependencies]
 
